; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_formatting.c_datetime_to_char_body.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_formatting.c_datetime_to_char_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@DCH_MAX_ITEM_SIZ = common dso_local global i32 0, align 4
@DCH_CACHE_SIZE = common dso_local global i32 0, align 4
@DCH_keywords = common dso_local global i32 0, align 4
@DCH_suff = common dso_local global i32 0, align 4
@DCH_index = common dso_local global i32 0, align 4
@DCH_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32, i32)* @datetime_to_char_body to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @datetime_to_char_body(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = call i8* @text_to_cstring(i32* %16)
  store i8* %17, i8** %10, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = call i32 @strlen(i8* %18)
  store i32 %19, i32* %13, align 4
  %20 = load i32, i32* %13, align 4
  %21 = load i32, i32* @DCH_MAX_ITEM_SIZ, align 4
  %22 = mul nsw i32 %20, %21
  %23 = add nsw i32 %22, 1
  %24 = call i8* @palloc(i32 %23)
  store i8* %24, i8** %11, align 8
  %25 = load i8*, i8** %11, align 8
  store i8 0, i8* %25, align 1
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* @DCH_CACHE_SIZE, align 4
  %28 = icmp sgt i32 %26, %27
  br i1 %28, label %29, label %43

29:                                               ; preds = %4
  store i32 0, i32* %12, align 4
  %30 = load i32, i32* %13, align 4
  %31 = add nsw i32 %30, 1
  %32 = sext i32 %31 to i64
  %33 = mul i64 %32, 1
  %34 = trunc i64 %33 to i32
  %35 = call i8* @palloc(i32 %34)
  store i8* %35, i8** %9, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = load i8*, i8** %10, align 8
  %38 = load i32, i32* @DCH_keywords, align 4
  %39 = load i32, i32* @DCH_suff, align 4
  %40 = load i32, i32* @DCH_index, align 4
  %41 = load i32, i32* @DCH_FLAG, align 4
  %42 = call i32 @parse_format(i8* %36, i8* %37, i32 %38, i32 %39, i32 %40, i32 %41, i32* null)
  br label %49

43:                                               ; preds = %4
  %44 = load i8*, i8** %10, align 8
  %45 = call %struct.TYPE_3__* @DCH_cache_fetch(i8* %44, i32 0)
  store %struct.TYPE_3__* %45, %struct.TYPE_3__** %15, align 8
  store i32 1, i32* %12, align 4
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i8*, i8** %47, align 8
  store i8* %48, i8** %9, align 8
  br label %49

49:                                               ; preds = %43, %29
  %50 = load i8*, i8** %9, align 8
  %51 = load i32, i32* %7, align 4
  %52 = load i32*, i32** %5, align 8
  %53 = load i8*, i8** %11, align 8
  %54 = load i32, i32* %8, align 4
  %55 = call i32 @DCH_to_char(i8* %50, i32 %51, i32* %52, i8* %53, i32 %54)
  %56 = load i32, i32* %12, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %61, label %58

58:                                               ; preds = %49
  %59 = load i8*, i8** %9, align 8
  %60 = call i32 @pfree(i8* %59)
  br label %61

61:                                               ; preds = %58, %49
  %62 = load i8*, i8** %10, align 8
  %63 = call i32 @pfree(i8* %62)
  %64 = load i8*, i8** %11, align 8
  %65 = call i32* @cstring_to_text(i8* %64)
  store i32* %65, i32** %14, align 8
  %66 = load i8*, i8** %11, align 8
  %67 = call i32 @pfree(i8* %66)
  %68 = load i32*, i32** %14, align 8
  ret i32* %68
}

declare dso_local i8* @text_to_cstring(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @palloc(i32) #1

declare dso_local i32 @parse_format(i8*, i8*, i32, i32, i32, i32, i32*) #1

declare dso_local %struct.TYPE_3__* @DCH_cache_fetch(i8*, i32) #1

declare dso_local i32 @DCH_to_char(i8*, i32, i32*, i8*, i32) #1

declare dso_local i32 @pfree(i8*) #1

declare dso_local i32* @cstring_to_text(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
